# fibonacciSequenceOperations

./: CMakeLists.txt  README.md  fib.cpp  fib.h  main.cpp  test1.cpp  test2.cpp  test3.cpp
Tests/: test1.cpp  test2.cpp  test3.cpp
